# 4D-Humans

./: .gitignore  README.md  pyproject.toml  track.py
hmr2/models/: __init__.py  smpl_wrapper.py
hmr2/utils/: depth_renderer.py
