[project]
name = "hmr2"
version = "0.1.0"
description = "HMR2.0: Human Mesh Recovery"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    # Core ML (torch<=2.6 for CUDA 12.4 driver compat)
    "torch>=2.0,<=2.6.0",
    "torchvision>=0.15,<=0.21.0",
    "pytorch-lightning>=2.0",

    # Body model
    "smplx>=0.1.28",

    # Rendering & geometry
    "pyrender>=0.1.45",
    "trimesh>=3.21",
    "pyopengl>=3.1.0",

    # Image processing
    "opencv-python>=4.7",
    "scikit-image>=0.20",

    # Config & data
    "yacs>=0.1.8",
    "omegaconf>=2.3",
    "einops>=0.6",
    "timm>=0.9",
    "webdataset>=0.2",

    # Utilities
    "numpy>=1.24",
    "dill>=0.3",
    "pandas>=2.0",
    "gdown>=4.7",
    "tqdm>=4.65",
    "filelock>=3.12",
    "pillow>=9.5",
]

[project.optional-dependencies]
detection = [
    "detectron2",
    "fvcore>=0.1.5",
]
# Note: tracking requires phalp, which must be installed manually because
# its transitive dependencies (chumpy, neural-renderer-pytorch) have broken
# build systems. See README for instructions.
training = [
    "rich>=13.0",
    "hydra-core>=1.3",
    "hydra-submitit-launcher>=1.2",
    "hydra-colorlog>=1.2",
    "pyrootutils>=1.0",
]
all = [
    "hmr2[detection,training]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hmr2"]

[tool.uv]
find-links = [
    # PyTorch CUDA 12.4 wheels (adjust for your CUDA version)
    "https://download.pytorch.org/whl/cu124",
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }

# detectron2 needs torch at build time but doesn't declare it
[tool.uv.extra-build-dependencies]
detectron2 = ["torch"]
